Broaden client provider-preference detection to mirror authlib-injector config resolution